[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Shen Yan <yans@mail.ustc.edu.cn>"]
description = "A key-value store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
clap = { version = "3.2.6", features = ["derive","cargo"] }